logs/boutique.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Boutique-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/BoutiqueCommons-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Flask_Script-2.0.5.egg-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.7.3.egg-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/boutiqueclient'...
Compiling './lib/python3.5/site-packages/boutiqueclient/boutique.py'...
***   File "./lib/python3.5/site-packages/boutiqueclient/boutique.py", line 33
    print 'You are not logged in. Use: boutique login'
                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/boutiqueclient/bservice'...
Listing './lib/python3.5/site-packages/boutiqueclient/bservice/api'...
Compiling './lib/python3.5/site-packages/boutiqueclient/bservice/api/credentials.py'...
***   File "./lib/python3.5/site-packages/boutiqueclient/bservice/api/credentials.py", line 27
    os.chmod(self._path, 0600)
                            ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/boutiqueclient/bservice/cmds'...
Compiling './lib/python3.5/site-packages/boutiqueclient/bservice/cmds/auth.py'...
***   File "./lib/python3.5/site-packages/boutiqueclient/bservice/cmds/auth.py", line 33
    print 'Authentication successful!'
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/boutiqueclient/bservice/cmds/server.py'...
***   File "./lib/python3.5/site-packages/boutiqueclient/bservice/cmds/server.py", line 140
    print "Failed to contact boutiqueforge.com server."
                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/boutiqueclient/bservice/cmds/site.py'...
***   File "./lib/python3.5/site-packages/boutiqueclient/bservice/cmds/site.py", line 16
    print site.get('name')
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/boutiqueclient/bsite'...
Listing './lib/python3.5/site-packages/boutiqueclient/bsite/objects'...
Listing './lib/python3.5/site-packages/boutiqueclient/bsite/objects/base'...
Listing './lib/python3.5/site-packages/boutiquecommons'...
Listing './lib/python3.5/site-packages/boutiquecommons/template'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/flask_script'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Listing './lib/python3.5/site-packages/jinja2/testsuite'...
Listing './lib/python3.5/site-packages/jinja2/testsuite/res'...
Listing './lib/python3.5/site-packages/jinja2/testsuite/res/templates'...
Listing './lib/python3.5/site-packages/jinja2/testsuite/res/templates/foo'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/path.py-4.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/charade'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/contrib'...
Compiling './lib/python3.5/site-packages/requests/packages/urllib3/contrib/ntlmpool.py'...
***   File "./lib/python3.5/site-packages/requests/packages/urllib3/contrib/ntlmpool.py", line 38
    """
     ^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 130-131: truncated \uXXXX escape

Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests-1.2.3.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
